--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -17,7 +17,7 @@ code {
 }
 #Home-section{
   height: 100vh;
-  background-color: crimson;
+  background-color: rgb(123, 92, 98);
 }
 #AboutMe-section{
   height: 100vh;
