added the coreners of the border in Home section

--- a/src/index.css
+++ b/src/index.css
@@ -1,41 +1,65 @@
 body {
   margin: auto;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-#FelixProfil{
-  height: 250px;
-  width: 250px;
+#FelixProfil {
+  padding-top:19vh; 
+  padding-left: 16vw;
+  max-height: 40vh;
+  width: auto;
 }
-#Home-section{
+#Home-section {
   height: 100vh;
   background-color: #2f4f4f;
 }
-#AboutMe-section{
-  height: 100vh;
-  background-color:#2f4f4f;
-}
-#Projects-section{
+#AboutMe-section {
   height: 100vh;
   background-color: #2f4f4f;
 }
-#Cv-section{
+#Projects-section {
   height: 100vh;
   background-color: #2f4f4f;
 }
-#MySunday-section{
+#Cv-section {
   height: 100vh;
-  background-color:#2f4f4f;
+  background-color: #2f4f4f;
+}
+#MySunday-section {
+  height: 100vh;
+  background-color: #2f4f4f;
 }
 * {
-  margin:0;
-  padding:0;
-  }
+  margin: 0;
+  padding: 0;
+}
+#Home-section:before, 
+#Home-section>:last-child:before {
+    position: absolute;
+    width: 60px; 
+    height: 50px;
+    border-color: white; 
+    border-style: solid;
+    content: ' ';
+}
+
+#Home-section:before {
+    top: 15vh;
+    left: 15vw;
+    border-width: 2px 0 0 2px
+}
+
+
+#Home-section>:last-child:before {
+    bottom: 15vh;
+    right: 15vw;     
+    border-width: 0 2px 2px 0
+}
