--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,14 @@ code {
   max-height: 40vh;
   width: auto;
 }
+#title {
+  color: white;
+  padding-left: 13vw;
+}
+#aboutMeBtn{
+  display: block;
+  align-items: center;
+}
 #Home-section {
   height: 100vh;
   background-color: #2f4f4f;
