--- a/src/index.css
+++ b/src/index.css
@@ -11,63 +11,83 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+#shortIntro{
+  color:silver;
+  margin-left:60vw;
+  margin-top: -65vh;
+}
 #FelixProfil {
-  padding-top:19vh; 
-  padding-left: 16vw;
-  max-height: 40vh;
-  width: auto;
+  top: 19vh;
+  left: 13vw;
 }
 #title {
-  color: white;
-  padding-left: 13vw;
+  color: silver;
+  margin-top: 25vh;
+  margin-left: 13vw;
 }
-#aboutMeBtn{
-  display: block;
-  align-items: center;
+#aboutMeBtn {
+  display: inline-block;
+  margin-left: 40vw;
+  margin-top: 45vh
+
+}
+#projectsBtn {
+  display: inline-block;
+  margin-left: 40%;
+  margin-top: 65vh
+}
+#cvBtn {
+  display: inline-block;
+  margin-left: 40%;
+  margin-top: 65vh
+}
+#mySundayBtn {
+  display: inline-block;
+  margin-left: 40%;
+  margin-top: 65vh
 }
 #Home-section {
   height: 100vh;
-  background-color: #2f4f4f;
+  background-color: #447171;
 }
 #AboutMe-section {
   height: 100vh;
-  background-color: #2f4f4f;
+  background-color: #447171;
 }
 #Projects-section {
   height: 100vh;
-  background-color: #2f4f4f;
+  background-color: #447171;
 }
 #Cv-section {
   height: 100vh;
-  background-color: #2f4f4f;
+  background-color: #447171;
 }
 #MySunday-section {
   height: 100vh;
-  background-color: #2f4f4f;
+  background-color: #447171;
 }
 * {
   margin: 0;
   padding: 0;
 }
-#Home-section:before, 
-#Home-section>:last-child:before {
-    position: absolute;
-    width: 60px; 
-    height: 50px;
-    border-color: white; 
-    border-style: solid;
-    content: ' ';
+#Home-section:before,
+#Home-section > :last-child:before {
+  position: absolute;
+  width: 60px;
+  height: 50px;
+  border-color: white;
+  border-style: solid;
+  content: " ";
 }
 
 #Home-section:before {
-    top: 15vh;
-    left: 15vw;
-    border-width: 2px 0 0 2px
+  top: 15vh;
+  left: 15vw;
+  border-width: 2px 0 0 2px;
 }
 
-
-#Home-section>:last-child:before {
-    bottom: 15vh;
-    right: 15vw;     
-    border-width: 0 2px 2px 0
+#Home-section > :last-child:before {
+  bottom: 15vh;
+  right: 15vw;
+  border-width: 0 2px 2px 0;
 }
