--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,7 @@ code {
     monospace;
 }
 #shortIntro{
-  color:silver;
-  margin-left:60vw;
+  margin-left:55vw;
   margin-top: -65vh;
 }
 #FelixProfil {
@@ -21,14 +20,13 @@ code {
   left: 13vw;
 }
 #title {
-  color: silver;
   margin-top: 25vh;
   margin-left: 13vw;
 }
 #aboutMeBtn {
   display: inline-block;
   margin-left: 40vw;
-  margin-top: 45vh
+  margin-top: 40vh
 
 }
 #projectsBtn {
@@ -48,23 +46,23 @@ code {
 }
 #Home-section {
   height: 100vh;
-  background-color: #447171;
+  background-color: #2f4454;
 }
 #AboutMe-section {
   height: 100vh;
-  background-color: #447171;
+  background-color: #008080;
 }
 #Projects-section {
   height: 100vh;
-  background-color: #447171;
+  background-color: #008080;
 }
 #Cv-section {
   height: 100vh;
-  background-color: #447171;
+  background-color: #008080;
 }
 #MySunday-section {
   height: 100vh;
-  background-color: #447171;
+  background-color: #008080;
 }
 * {
   margin: 0;
